# tinyrenderer

./: .gitignore  main.cpp  our_gl.cpp  our_gl.h
GL/: CMakeLists.txt  main.cpp
